--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,7 @@ body{
     background-color: #A47E3B ; 
 }
 
-/* estilos header*/
+/* estilos header todos*/
 
 header{
     display: flex;
@@ -50,12 +50,12 @@ header nav ul li a{
 
 header nav ul li a:hover{
     font-size: 80%;
-    color: rgb(230, 179, 37);
+    color:#A47E3B;
 }
 
-/*estilos del contenedor grid*/
+/*estilos del contenedor padre del index*/
 
-.container{
+.container-index{
     display: grid;
     height: 85vh;
     grid-template-columns: 1fr 1fr;
@@ -70,8 +70,7 @@ header nav ul li a:hover{
 
 }
 
-
-/*estilos de main*/
+/*estilos de main index*/
 
 main{
     grid-area: main;
@@ -98,32 +97,23 @@ main{
 }
 
 .fotos{
+    justify-content: center;
+    align-content: center;
+}
+
+
+.pfoto{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 5px;
+    background-color:rgb(97, 72, 28);
+    color: white;
+    font-style: italic;
     
-    
-}
-.pfoto1{
-    display: flex;
-    text-align: center;
-}
-.pfoto2{
-    display: flex;
-    text-align: center;
-}
-.pfoto3{
-    display: none;
-    text-align: center;
+    padding-left: 8px;
+    border: 3px solid black;
+    width: 100%;
+    height: 30px;
 
 }
-.pfoto4{
-    display: none;
-    text-align: center;
-}
-
-
 .foto1{
     grid-area: foto1;
     width: 80px;
@@ -202,7 +192,7 @@ form textarea{
 
 @media screen and (min-width: 600px)
 {
-    .container{
+    .container-index{
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 60% 40%;
         column-gap: 1rem;
@@ -280,7 +270,7 @@ form textarea{
 
 @media screen and (min-width: 1024px)
 {
-    .container{
+    .container-index{
         height: 90vh;
         grid-template-columns: 1fr 1fr ;
         grid-template-rows: 40% 25% 25%;
@@ -346,7 +336,7 @@ form textarea{
 
     @media screen and (min-width: 1440px)
     {
-        .container{
+        .container-index{
             height: 90vh;
             grid-template-columns: 1fr 1fr ;
             grid-template-rows: 40% 25% 25%;
@@ -375,7 +365,7 @@ form textarea{
             
                     }   
         header nav ul li a:hover{
-            font-size: 300%;
+            font-size: 250%;
                     }                      
                     
         
