--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,16 +13,14 @@ body {
 /*header*/
 header {
   width: 100%;
-  height: auto; 
-}
+  height: auto; }
   header h1 {
     width: 100%;
     height: 60px;
     background-color: #A47E3B;
     font-family: 'Montserrat', sans-serif;
     padding-top: 20px;
-    text-align: center; 
-  }
+    text-align: center; }
   header nav {
     width: 100%;
     height: 50px;
@@ -103,3 +101,7 @@ form {
     color: #fff;
     font-size: 2em;
     cursor: pointer; }
+
+
+
+/*estilos a agregar a sass*/
