--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,9 @@
 //importando archivos secundarios
 
-@import "utilities/variables";
+@import "base/variables";
+@import "base/mixin";
+@import "base/listas";
+@import "base/mapas";
 
 
 /*reset*/
@@ -12,71 +15,19 @@
 
 body{
     background-color: $col-prin;
-    width: 100%;
-    height: auto;
-    margin: 10px auto;
+    width: 100vw;
+    height: 100vh;
 }
 
-/*header*/
-header{
-    width: 100%;
-    height: auto;
-    h1{
-        width: 100%;
-        height: 60px;
-        background-color: $col-prin;
-        font-family: 'Montserrat', sans-serif;
-        padding-top: 20px;
-        text-align: center;
-    }
-    nav{
-        width: 100%;
-        height: 50px;
-        background-color: $col-sec;
-        color: $col-text-contraste;
-        margin-top: 10px;
-    }
-    ul{
-        padding-top: 10px;
-        text-align: center;
-        padding-left: 10px;
-    }
-    li{
-        display: inline;
-        list-style: none;
-    }
-    a{
-        float: left;
-        text-decoration: none;
-        color: $col-text-contraste;
-        padding-left: 10px;
-    }
-    a:hover{
-        color: $col-li-contraste;
-    }
-}
 
-/*footer*/
 
-footer{
-    div{
-        justify-items: center;
-        align-items: center;
+@media screen and (max-width: 768px){
+    header{
+
     }
-    h3{
-        font-size: 0.6rem;
-        justify-items: center;
-        text-align:center;
-        text-transform: bold;    
-    }
-    a{
-        margin-left: 5px;
-    }
-    img{
-        margin-top: -5px;
-        width: 25px;
-        height: 25px;
-    }
+        h1{
+            font-size: 10%;
+        }
 }
 
 
