--- a/scss/utilities/_contacto.scss
+++ b/scss/utilities/_contacto.scss
@@ -3,11 +3,12 @@
 /* formulario de contacto*/
 
 form{
-    width: 50%;
+    width: 40%;
     margin: auto;
     background:$col-sec;
     padding: 10px 20px;
     margin-top: 20px;
+    margin-bottom: 50px;
     border-radius: 7px;
     font-family: 'Uchen', serif;
     h2{
