--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
 @import "base/mapas";
 
 
+
 /*reset*/
 *{
     margin: 0;
@@ -20,19 +21,9 @@ body{
 }
 
 
-
-@media screen and (max-width: 768px){
-    header{
-
-    }
-        h1{
-            font-size: 10%;
-        }
-}
+@import "utilities/header";
 
 
-
-//importando archivos secundarios
 /*importar estilos index*/
 @import "utilities/index";
 
