--- a/scss/utilities/_nosotros.scss
+++ b/scss/utilities/_nosotros.scss
@@ -3,52 +3,7 @@
 @import "base/mapas";
 @import "base/listas";
 
-/*header*/
-.titulo{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    height: 200px;
 
-    h1{
-        font-size: 5em;
-        width: 100%;
-        height: 100px;
-        font-family: 'Montserrat', sans-serif;
-        padding: 0 20px 0 20px;
-        text-align: center;
-    }
-    nav{
-        width: 80%;
-        margin: 50px auto 50px auto;
-        height: 60px;
-        background-color: $col-sec;
-        color: $col-text-contraste;
-        margin-top: 10px;
-        
-    }
-    ul{
-        padding-top: 10px;
-        margin-left: -30px;
-        text-align: center;
-    }
-    li{
-        display: inline;
-        list-style: none;
-        
-    }
-    a{
-        font-size: 1.3rem;
-        text-decoration: none;
-        color: $col-text-contraste;
-        padding-left: 50px;
-    }
-    a:hover{
-        color: $col-li-contraste;
-        font-size: 150%;
-    }
-}
 
 /*estilos main y aside*/
 
@@ -124,11 +79,7 @@ footer{
                 }
 }
 
-@media screen and (max-width: 850px){
-    .titulo{
-        h1{
-            font-size: 3em;
-        }
+@media screen and (max-width: 768px){
         nav{
             height: 50px;
             margin-top: -30px;
@@ -137,16 +88,14 @@ footer{
 
         }
         li{            
+        
         }
-        a{
-            font-size: 1.1rem;
-            padding-left: 10px;
+        a:{
+            font-size: 1.5vw;
         }
         a:hover{
-            font-size: 120%;
+            font-size: 100%;
         }
-    }
-
     .nos-cont{
         .main-nos{
         }
@@ -169,7 +118,6 @@ footer{
                 margin-bottom: 15px;
             }
             .foto-3{
-        
             }
         footer h3{
             font-size: 1.2em;
@@ -182,11 +130,10 @@ footer{
 @media screen and (max-width: 768px){
     .titulo{
         h1{
-            font-size: 2.8em;
-            margin-top: 20px;
+            margin-top: 50px;
         }
         nav{
-
+            margin-top: -20px;
         }
         ul{
 
